--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -159,9 +159,9 @@
     <string name="delete_re_raise_event">இந்த நிகழ்வை நீக்கி அறிவிப்பை மீண்டும் உயர்த்த விரும்புகிறீர்களா?</string>
     <string name="time_based_reminder">நேர அடிப்படையிலான நினைவூட்டல்</string>
     <string name="interval_based_reminder">இடைவெளி அடிப்படையிலான நினைவூட்டல்</string>
-    <string name="minutes">Minutes</string>
-    <string name="hours">Hours</string>
-    <string name="days">Days</string>
+    <string name="minutes_string">Minutes</string>
+    <string name="hours_string">Hours</string>
+    <string name="days_string">Days</string>
     <string name="create_reminder">நினைவூட்டலை உருவாக்கவும்</string>
     <string name="interval">இடைவேளை</string>
     <string name="interval_start_time">இடைவெளி தொடக்க நேரம்</string>
