--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -170,9 +170,9 @@
         <item quantity="one">gün</item>
         <item quantity="other">gün</item>
     </plurals>
-    <string name="minutes">Dakika</string>
-    <string name="hours">Saatler</string>
-    <string name="days">Günler</string>
+    <string name="minutes_string">Dakika</string>
+    <string name="hours_string">Saatler</string>
+    <string name="days_string">Günler</string>
     <string name="create_reminder">Hatırlatma oluşturun</string>
     <string name="interval">Aralık</string>
     <string name="interval_start_time">Aralık başlangıç zamanı</string>
