Finish last interval display in overview

--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -217,4 +217,5 @@
     <string name="sticky_on_lockscreen_summary">Herinneringen kunnen niet worden verwijderd vanaf het vergrendelscherm, alleen vanuit de meldingenlade</string>
     <string name="big_notifications">Grote meldingsknoppen</string>
     <string name="please_wait">Even geduld…</string>
+    <string name="interval_time">Interval %s</string>
 </resources>
