--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -217,4 +217,5 @@
     <string name="sticky_on_lockscreen_summary">Hatırlatıcılar kilit ekranından kapatılamaz, sadece bildirim çekmecesinden kapatılabilir</string>
     <string name="big_notifications">Büyük bildirim düğmeleri</string>
     <string name="please_wait">Lütfen bekleyin…</string>
+    <string name="interval_time">Aralık %s</string>
 </resources>
