--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -221,4 +221,5 @@
     <string name="sticky_on_lockscreen_summary">Reminders cannot be dismissed from the lock screen, only from the notifications drawer</string>
     <string name="big_notifications">Big notification buttons</string>
     <string name="please_wait">Please wait…</string>
+    <string name="interval_time">Interval %s</string>
 </resources>
