--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -238,4 +238,5 @@
     <string name="use_relative_date_time">التاريخ/الوقت النسبي</string>
     <string name="invalid_amount">يجب أن تحتوي الكمية على رقم لتمكين تتبع مخزون الدواء لهذا التذكير.</string>
     <string name="time_reminder_type_hint">يذكر في وقت محدد من اليوم.</string>
+    <string name="interval_time">فاصل %s</string>
 </resources>
