--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -217,4 +217,5 @@
     <string name="sticky_on_lockscreen_summary">Erinnerungen können nicht über den Sperrbildschirm, sondern nur über die Benachrichtigungsleiste verworfen werden</string>
     <string name="big_notifications">Große Benachrichtigungsknöpfe</string>
     <string name="please_wait">Bitte warten…</string>
+    <string name="interval_time">Intervall %s</string>
 </resources>
