--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -223,4 +223,5 @@
     <string name="sticky_on_lockscreen_summary">I promemoria non possono essere eliminati dalla schermata di blocco, ma solo dal cassetto delle notifiche</string>
     <string name="big_notifications">Pulsanti di notifica grandi</string>
     <string name="please_wait">Attendere prego…</string>
+    <string name="interval_time">Intervallo %s</string>
 </resources>
