--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -222,4 +222,5 @@
     <string name="variable_amount">Insira a dosagem quando tomada</string>
     <string name="icon">Ícone</string>
     <string name="tags">Etiquetas</string>
+    <string name="interval_time">Intervalo %s</string>
 </resources>
