--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -225,4 +225,5 @@
     <string name="sticky_on_lockscreen_summary">Напоминания нельзя отменить на экране блокировки, только в ящике уведомлений</string>
     <string name="big_notifications">Большие кнопки уведомлений</string>
     <string name="please_wait">Пожалуйста, подождите…</string>
+    <string name="interval_time">Интервал %s</string>
 </resources>
