--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -224,4 +224,5 @@
     <string name="big_notifications">Gros boutons de notification</string>
     <string name="please_wait">Veuillez patienter…</string>
     <string name="interval_time">Intervalle %s</string>
+    <string name="reminded">Rappelé</string>
 </resources>
