--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -224,4 +224,5 @@
     <string name="big_notifications">Pulsanti di notifica grandi</string>
     <string name="please_wait">Attendere prego…</string>
     <string name="interval_time">Intervallo %s</string>
+    <string name="reminded">Ricordato</string>
 </resources>
