--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -223,4 +223,5 @@
     <string name="icon">Ícone</string>
     <string name="tags">Etiquetas</string>
     <string name="interval_time">Intervalo %s</string>
+    <string name="reminded">Lembrado</string>
 </resources>
