--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -219,4 +219,5 @@
     <string name="big_notifications">பெரிய அறிவிப்பு பொத்தான்கள்</string>
     <string name="please_wait">தயவுசெய்து காத்திருக்கவும்…</string>
     <string name="interval_time">இடைவெளி %s</string>
+    <string name="reminded">நினைவூட்டப்பட்டது</string>
 </resources>
