--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -227,4 +227,5 @@
     <string name="please_wait">Пожалуйста, подождите…</string>
     <string name="interval_time">Интервал %s</string>
     <string name="reminded">Напомнили</string>
+    <string name="all_taken">Все принято</string>
 </resources>
