--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -219,4 +219,5 @@
     <string name="please_wait">Bitte warten…</string>
     <string name="interval_time">Intervall %s</string>
     <string name="reminded">Erinnert</string>
+    <string name="all_taken">Alle eingenommen</string>
 </resources>
