--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -225,4 +225,5 @@
     <string name="please_wait">Por favor, espere…</string>
     <string name="interval_time">Intervalo %s</string>
     <string name="reminded">Recordado</string>
+    <string name="all_taken">Todas tomadas</string>
 </resources>
