--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -224,4 +224,5 @@
     <string name="tags">Etiquetas</string>
     <string name="interval_time">Intervalo %s</string>
     <string name="reminded">Lembrado</string>
+    <string name="all_taken">Todas tomadas</string>
 </resources>
