--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -225,5 +225,5 @@
     <string name="please_wait">Veuillez patienter…</string>
     <string name="interval_time">Intervalle %s</string>
     <string name="reminded">Rappelé</string>
-    <string name="all_taken">Toutes prises</string>
+    <string name="all_taken">Toutes prises (%s)</string>
 </resources>
