--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -223,5 +223,5 @@
     <string name="please_wait">Please wait…</string>
     <string name="interval_time">Interval %s</string>
     <string name="reminded">Reminded</string>
-    <string name="all_taken">All taken</string>
+    <string name="all_taken">All taken (%s)</string>
 </resources>
