--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -226,4 +226,5 @@
     <string name="interval_time">Intervalo %s</string>
     <string name="reminded">Recordado</string>
     <string name="all_taken">Todas tomadas (%s)</string>
+    <string name="estimated_run_out_date">Fecha estimada de agotamiento</string>
 </resources>
