--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -226,4 +226,5 @@
     <string name="interval_time">Intervalle %s</string>
     <string name="reminded">Rappelé</string>
     <string name="all_taken">Toutes prises (%s)</string>
+    <string name="estimated_run_out_date">Date d\'épuisement estimée</string>
 </resources>
