--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -220,4 +220,5 @@
     <string name="interval_time">Interval %s</string>
     <string name="reminded">Herinnerd</string>
     <string name="all_taken">Alles ingenomen (%s)</string>
+    <string name="estimated_run_out_date">Verwachte Einddatum Voorraad</string>
 </resources>
