--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -226,4 +226,5 @@
     <string name="reminded">Lembrado</string>
     <string name="all_taken">Todos tomados (%s)</string>
     <string name="total">Total</string>
+    <string name="estimated_run_out_date">Data estimada de término</string>
 </resources>
