--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -221,4 +221,5 @@
     <string name="interval_time">இடைவெளி %s</string>
     <string name="reminded">நினைவூட்டப்பட்டது</string>
     <string name="all_taken">அனைத்தும் எடு (%s)</string>
+    <string name="estimated_run_out_date">மதிப்பிடப்பட்ட தீர்ந்துபோகும் தேதி</string>
 </resources>
