--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -220,4 +220,5 @@
     <string name="interval_time">Aralık %s</string>
     <string name="reminded">Hatırlatıldı</string>
     <string name="all_taken">Hepsi alındı (%s)</string>
+    <string name="estimated_run_out_date">Tahmini Bitiş Tarihi</string>
 </resources>
