--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -215,4 +215,5 @@
     <string name="interval_time">间隔 %s</string>
     <string name="reminded">已提醒</string>
     <string name="all_taken">都服用了 (%s)</string>
+    <string name="estimated_run_out_date">预计用完日期</string>
 </resources>
