--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -224,4 +224,5 @@
     <string name="interval_time">Interval %s</string>
     <string name="reminded">Reminded</string>
     <string name="all_taken">All taken (%s)</string>
+    <string name="estimated_run_out_date">Estimated run out date</string>
 </resources>
