Implement adding calendar entry for stock run out time

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -221,4 +221,5 @@
     <string name="reminded">Erinnert</string>
     <string name="all_taken">Alle eingenommen (%s)</string>
     <string name="estimated_run_out_date">Voraussichtliches Enddatum des Vorrats</string>
+    <string name="create_calendar_entry">Kalendereintrag erstellen</string>
 </resources>
