--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -242,4 +242,5 @@
     <string name="reminded">ذكر</string>
     <string name="all_taken">تم تناول الجميع (%s)</string>
     <string name="estimated_run_out_date">تاريخ النفاد التقديري</string>
+    <string name="create_calendar_entry">إنشاء إدخال تقويم</string>
 </resources>
