--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -227,4 +227,5 @@
     <string name="reminded">Rappelé</string>
     <string name="all_taken">Toutes prises (%s)</string>
     <string name="estimated_run_out_date">Date d\'épuisement estimée</string>
+    <string name="create_calendar_entry">Créer une entrée de calendrier</string>
 </resources>
