--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -227,4 +227,5 @@
     <string name="reminded">Ricordato</string>
     <string name="all_taken">Tutte assunte (%s)</string>
     <string name="estimated_run_out_date">Data di scadenza stimata</string>
+    <string name="create_calendar_entry">Crea voce di calendario</string>
 </resources>
