--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -222,4 +222,5 @@
     <string name="reminded">நினைவூட்டப்பட்டது</string>
     <string name="all_taken">அனைத்தும் எடு (%s)</string>
     <string name="estimated_run_out_date">மதிப்பிடப்பட்ட தீர்ந்துபோகும் தேதி</string>
+    <string name="create_calendar_entry">காலண்டர் உள்ளீட்டை உருவாக்கவும்</string>
 </resources>
