--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -231,4 +231,5 @@
     <string name="reminded">Нагадано</string>
     <string name="all_taken">Усе прийнято (%s)</string>
     <string name="estimated_run_out_date">Орієнтовна дата закінчення</string>
+    <string name="create_calendar_entry">Створити запис у календарі</string>
 </resources>
