--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -225,4 +225,5 @@
     <string name="reminded">Reminded</string>
     <string name="all_taken">All taken (%s)</string>
     <string name="estimated_run_out_date">Estimated run out date</string>
+    <string name="create_calendar_entry">Create calendar entry</string>
 </resources>
