--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -223,4 +223,5 @@
     <string name="all_taken">Todas tomadas (%s)</string>
     <string name="estimated_run_out_date">Fecha estimada de agotamiento</string>
     <string name="create_calendar_entry">Crear entrada de calendario</string>
+    <string name="notes">Notas</string>
 </resources>
