--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -217,4 +217,5 @@
     <string name="all_taken">Alles ingenomen (%s)</string>
     <string name="estimated_run_out_date">Verwachte Einddatum Voorraad</string>
     <string name="create_calendar_entry">Agenda-item maken</string>
+    <string name="notes">Notities</string>
 </resources>
