--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -225,4 +225,5 @@
     <string name="all_taken">Все принято (%s)</string>
     <string name="estimated_run_out_date">Предполагаемая дата окончания</string>
     <string name="create_calendar_entry">Создать запись в календаре</string>
+    <string name="notes">Заметки</string>
 </resources>
