--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -212,4 +212,5 @@
     <string name="all_taken">都服用了 (%s)</string>
     <string name="estimated_run_out_date">预计用完日期</string>
     <string name="create_calendar_entry">创建日历条目</string>
+    <string name="notes">笔记</string>
 </resources>
