Make sort translatable #778

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,7 +91,7 @@
     <string name="cycle_reminders">Cyclic reminders</string>
     <string name="weekday_limited">Limited to some weekdays</string>
     <string name="reminders">Reminders</string>
-    <string name="sort" translatable="false">Sort</string>
+    <string name="sort">Sort</string>
     <string name="filter">Filter</string>
     <string name="seven_days">7 days</string>
     <string name="analysis">Analysis</string>
